<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/lin_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints,UselessParent">
            <TextView
                android:id="@+id/txt_tranyear"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/deep_black"
                android:text="@string/transaction_year"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/txt_month"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/deep_black"
                android:text="@string/month"/>
            <TextView
                android:id="@+id/txt_installation"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/deep_black"
                android:text="@string/installation"/>
            <TextView
                android:id="@+id/txt_opening_balance"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/deep_black"
                android:text="@string/opening_balance"/>
            <TextView
                android:id="@+id/txt_consumed_unit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/deep_black"
                android:text="@string/consumedunit"/>
            <TextView
                android:id="@+id/txt_demand"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/deep_black"
                android:text="@string/demand"/>
            <TextView
                android:id="@+id/txt_net_pay_amt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/deep_black"
                android:text="@string/net_pay_amount"/>
            <TextView
                android:id="@+id/txt_collection_amt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/deep_black"
                android:text="@string/collection_amount"/>
            <TextView
                android:id="@+id/txt_closing_balance_amt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/deep_black"
                android:text="@string/closing_balance_amount"/>
        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>