<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/lin_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,UselessParent">
        <TextView
            android:id="@+id/txt_tranyear"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/deep_black"
            android:text="@string/transaction_year"/>
        <TextView
            android:id="@+id/txt_billed_installation"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/deep_black"
            android:text="@string/billed_installation"/>
        <TextView
            android:id="@+id/txt_subnormal_installation"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/deep_black"
            android:text="@string/subnormal_installation"/>
    </LinearLayout>
</RelativeLayout>