<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Summarization.Billing_Summarization.BillingSummarization_Tariffwise_Report">
    <include android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/custom_toolbar" />
    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/lin_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/light_dark"
                        tools:ignore="MissingConstraints">
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/transaction_year"/>
                        <TextView
                            android:visibility="gone"
                            android:id="@+id/txt_month"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/month"/>
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/installation"/>
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/opening_balance"/>
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/consumed_unit"/>
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/demand"/>
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/net_pay_amount"/>
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/collection_amount"/>
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/closing_balance_amount"/>
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/payment_summ_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lin_header"
                        tools:ignore="MissingConstraints"/>

                    <LinearLayout
                        android:layout_below="@+id/payment_summ_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/light_dark"
                        tools:ignore="MissingConstraints">
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/grand_total"/>
                        <TextView
                            android:id="@+id/txt_tot_month"
                            android:visibility="gone"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary" />
                        <TextView
                            android:id="@+id/txt_tot_install"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/installation"/>
                        <TextView
                            android:id="@+id/txt_tot_opening_bls"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/opening_balance"/>
                        <TextView
                            android:id="@+id/txt_tot_con_unit"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/consumed_unit"/>
                        <TextView
                            android:id="@+id/txt_tot_demand"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/demand"/>
                        <TextView
                            android:id="@+id/txt_tot_net_amt"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/net_pay_amount"/>
                        <TextView
                            android:id="@+id/txt_tot_coll_amt"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/collection_amount"/>
                        <TextView
                            android:id="@+id/txt_tot_closing_amt"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/closing_balance_amount"/>
                    </LinearLayout>
                </RelativeLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>