<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Summarization.Billing_Summarization.BillingSummarization_Tariffwise_Report">
    <include android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_toolbar"/>
    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/lin_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_dark"
                tools:ignore="MissingConstraints">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/transaction_year"/>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/txt_month"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/month"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/installation"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/consumedunit"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/currentbillamt"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/billing_summ_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lin_header"
                tools:ignore="MissingConstraints"/>

            <LinearLayout
                android:id="@+id/lin_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_dark"
                tools:ignore="MissingConstraints">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/grand_total"/>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/txt_tot_month"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary" />
                <TextView
                    android:id="@+id/txt_tot_instal"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary" />
                <TextView
                    android:id="@+id/txt_tot_consumed_unit"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary" />
                <TextView
                    android:id="@+id/txt_tot_current_billed_amt"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>