<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Summarization.Billing_Summarization.BillingSummarization_Tariffwise_Report">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lin_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_dark"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/txt_year_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/transaction_year"
                    android:textColor="@color/textColorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/installation"
                    android:textColor="@color/textColorPrimary" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/billing_summ_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lin_header"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/lin_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_dark"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/grand_total"
                    android:textColor="@color/textColorPrimary" />

                <TextView
                    android:id="@+id/txt_instal_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>